<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_margin="16dp"
        android:background="@drawable/card_background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">
            <ImageView
                android:layout_width="93dp"
                android:layout_height="93dp"
                android:src="@drawable/person"
                android:contentDescription="@string/person_description" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                </View>
                <TextView
                    android:layout_width="38dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="58dp"
                    android:background="@drawable/work_hours_background"
                    android:gravity="center"
                    android:text="@string/work_hours"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="16dp"
                    android:text="@string/job_title"
                    style="@style/declaration"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                </View>
                <TextView
                    style="@style/declaration"
                    android:layout_width="44dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="109dp"
                    android:text="@string/nationality"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_baseline_location_on_24"
                    android:contentDescription="@string/location_description" />

                <TextView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:text="@string/location"
                    android:textColor="@color/location_color"
                    android:textSize="13sp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                </View>
                <TextView
                    android:layout_width="61dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="111dp"
                    android:text="@string/_5_days_ago"
                    android:textColor="@color/days"
                    android:textSize="@dimen/small_text_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:text="@string/reviews"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="18dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/rate"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="@color/black"
                    />
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/ic_baseline_star_24"
                    android:contentDescription="@string/star" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>